# hm_practice

./: .ocamlformat  README.md  dune-project  flake.nix  hm_practice.opam
lib/: dune  hm.ml  hm_mp.ml  hm_sp.ml
